# tempfile312

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/tempfile312/: __init__.py  __init__.pyi
test/: test_tempfile.py
test/support/: __init__.py  os_helper.py  script_helper.py  threading_helper.py
