[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tempfile312"
version = "1.0.0"
authors = [
    {name = "Albert Zhang", email = "bert@alchzh.me"}
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Python Software Foundation License"
]

[project.urls]
Homepage = "https://github.com/alchzh/tempfile312"
Source = "https://github.com/alchzh/tempfile312"
Documentation = "https://docs.python.org/3.12/library/tempfile.html"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tempfile312"]
